--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -26,11 +26,11 @@
         height: 85px;
         background: #ffffff;
         border-radius: 50% 50% 50% 50%;
-        -webkit-transition: all 0.7s ease-in-out;
-        -moz-transition: all 0.7s ease-in-out;
-        -ms-transition: all 0.7s ease-in-out;
-        -o-transition: all 0.7s ease-in-out;
-        transition: all 0.7s ease-in-out;
+        -webkit-transition: all 0.7s linear;
+        -moz-transition: all 0.7s linear;
+        -ms-transition: all 0.7s linear;
+        -o-transition: all 0.7s linear;
+        transition: all 0.7s linear;
         box-shadow: 0 0 10px 10px rgba(59, 130, 246, 0.1);
         cursor: pointer;
         display: flex;
@@ -111,7 +111,7 @@
   
     .hamburger-menu label ul {
         z-index: 200;
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         -webkit-transform: translate(-50%, -50%);
@@ -126,11 +126,13 @@
     }
   
     .hamburger-menu label ul li {
+        z-index: 200;
         display: block;
         text-align: center;
     }
   
     .hamburger-menu label a {
+        z-index: 200;
         font-size: 24px;
         font-weight: bold;
         margin-bottom: 22px;
