--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -26,11 +26,11 @@
         height: 85px;
         background: #ffffff;
         border-radius: 50% 50% 50% 50%;
-        -webkit-transition: all 0.7s linear;
-        -moz-transition: all 0.7s linear;
-        -ms-transition: all 0.7s linear;
-        -o-transition: all 0.7s linear;
-        transition: all 0.7s linear;
+        -webkit-transition: all 0.5s ease-in;
+        -moz-transition: all 0.5s ease-in;
+        -ms-transition: all 0.5s ease-in;
+        -o-transition: all 0.5s ease-in;
+        transition: all 0.5s ease-in;
         box-shadow: 0 0 10px 10px rgba(59, 130, 246, 0.1);
         cursor: pointer;
         display: flex;
