--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@
         left: 0;
         width: 100%;
         height: 100%;
+        z-index: -1;
     }
     .signin .contentBx{
         display: flex;
@@ -164,5 +165,12 @@
         color: #607d8b;
         text-align: center;
         margin: 30px 0 10px;
+    }
+}
+
+@media(max-width: 480px){
+    .signin .contentBx .formBx{
+        padding: 30px 20px;
+        margin: 10px;
     }
 }
