--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -50,11 +50,11 @@ color: #7292A6 !important;
         height: 85px;
         background: #ffffff;
         border-radius: 50% 50% 50% 50%;
-        -webkit-transition: all 0.5s ease-in;
-        -moz-transition: all 0.5s ease-in;
-        -ms-transition: all 0.5s ease-in;
-        -o-transition: all 0.5s ease-in;
-        transition: all 0.5s ease-in;
+        -webkit-transition: all 0.5s ease-out;
+        -moz-transition: all 0.5s ease-out;
+        -ms-transition: all 0.5s ease-out;
+        -o-transition: all 0.5s ease-out;
+        transition: all 0.5s ease-out;
         box-shadow: 0 0 10px 10px rgba(59, 130, 246, 0.1);
         cursor: pointer;
         display: flex;
