--- a/src/Components/DropDown.css
+++ b/src/Components/DropDown.css
@@ -1,7 +1,7 @@
 .dropDown {
     padding: 0.33rem 0.15rem 0.33rem 0.66rem;
     background: #fff;
-    box-shadow: 0 0.25rem 0.5rem rgba(26, 26, 44, 0.05);
+    /* box-shadow: 0 0.25rem 0.5rem rgba(26, 26, 44, 0.05); */
     border-radius: 0.5rem;
     font-size: 0.85rem;
     margin-right: 1rem;
@@ -26,7 +26,7 @@
     right: 0;
     list-style-type: none;
     box-shadow: 0 0.25rem 0.5rem rgba(26, 26, 44, 0.15);
-    z-index: 5;
+    z-index: 500;
     overflow: hidden;
     overflow: scroll;
   }
