--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -5,6 +5,19 @@
 h1,h2,h3,h4,h5,h6{
     color: #39464d !important;
 } */
+
+@media(max-width: 768px){
+  .book img{
+    max-width: 100%;
+    height: auto !important;
+  }
+  
+}
+
+.navbar div .text-lg:hover{
+  color: #1EA5FC;
+}
+
 .h-text{
   color: #39464d;
 }
@@ -14,12 +27,7 @@ h1,h2,h3,h4,h5,h6{
 .s-text{
   color: #1EA5FC;
 }
-/* span{
-color: #1380F9 !important;
-}
-p{
-color: #7292A6 !important;
-} */
+
 
 .btn-bg{
   background: linear-gradient(
@@ -42,6 +50,8 @@ color: #7292A6 !important;
     font-size: 16px;
     border-radius: 40px;
 }
+
+
 .chats p{
     color: rgb(0, 32, 30) !important;
 }
@@ -70,11 +80,11 @@ color: #7292A6 !important;
         height: 85px;
         background: #ffffff;
         border-radius: 50% 50% 50% 50%;
-        -webkit-transition: all 0.5s ease-out;
-        -moz-transition: all 0.5s ease-out;
-        -ms-transition: all 0.5s ease-out;
-        -o-transition: all 0.5s ease-out;
-        transition: all 0.5s ease-out;
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        -ms-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+        transition: all 0.5s ease;
         box-shadow: 0 0 10px 10px rgba(59, 130, 246, 0.1);
         cursor: pointer;
         display: flex;
@@ -186,7 +196,7 @@ color: #7292A6 !important;
     }
   
     .hamburger-menu label a:hover {
-        color: #1380F9;
+        color: #1EA5FC;
     }
   }
   
@@ -196,6 +206,185 @@ color: #7292A6 !important;
         display: none;
     }
   }
+
+
+  /*signup box  */
+  
+
+.signin{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+.signin .imgBx{
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+.signin .imgBx::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(225deg, #e91e63, #1EA5FC);
+  z-index: 1;
+  mix-blend-mode: screen;
+}
+.signin .imgBx img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.signin .contentBx{
+  display: flex;
+  width: 50%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.signin .contentBx .formBx{
+  width: 50%;
+}
+.signin .contentBx .formBx h2{
+  color: #607d8b;
+  font-weight: 600;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  border-bottom: 4px solid #ff4584;
+  display: inline-block;
+  letter-spacing: 1px;
+}
+.signin .contentBx .formBx .inputBx{
+  margin-bottom: 20px;
+}
+.signin .contentBx .formBx .inputBx span{
+  font-size: 16px;
+  margin-bottom: 5px;
+  display: inline-block;
+  color: #607d8b;
+  font-weight: 300;
+  font-size: 16px;
+  letter-spacing: 1px;
+}
+.signin .contentBx .formBx .inputBx input{
+  width: 100%;
+  padding: 10px 20px;
+  outline: none;
+  font-weight: 400;
+  border: 1px solid #607d8b;
+  font-size: 16px;
+  letter-spacing: 1px;
+  color: #607d8b;
+  background: transparent;
+  border-radius: 30px;
+}
+.signin .contentBx .formBx .inputBx input[type="submit"]{
+  background: #ff4584;
+  color: #fff;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  cursor: pointer;
+}
+.signin .contentBx .formBx .inputBx input[type="submit"]:hover{
+  background: #f53677;
+}
+.signin .contentBx .formBx .remember{
+  margin-bottom: 10px;
+  color: #607d8b;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.signin .contentBx .formBx .inputBx .signupnav{
+  text-decoration: none;
+  color: #ff4584;
+}
+.signin .contentBx .formBx .inputBx .signupnav:hover{
+  text-decoration: none;
+  color: #1EA5FC;
+}
+.signin .contentBx .formBx h3{
+  color: #607d8b;
+  text-align: center;
+  margin: 20px 0 10px;
+  font-weight: 500;
+}
+.signin .contentBx .formBx .sci{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.signin .contentBx .formBx .sci li{
+  list-style: none;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #607d8b;
+  border-radius: 50%;
+  margin: 0 7px;
+  transition: .2s;
+  cursor: pointer;
+}
+.signin .contentBx .formBx .sci li:hover{
+  background: #ff4584;
+}
+
+.signin .contentBx .formBx .sci li svg{
+  color: #fff;
+}
+
+@media(max-width: 991px){
+  .signin .contentBx .formBx{
+      width:70%;
+  }
+}
+@media(max-width: 768px){
+  .signin .imgBx{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+  }
+  .signin .contentBx{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      position: absolute;
+  }
+  .signin .contentBx .formBx{
+      width: 100%;
+      padding: 40px;
+      background: rgba(255, 255, 255, 0.9);
+      margin: 50px;
+  }
+  .signin .contentBx .formBx h3{
+      color: #607d8b;
+      text-align: center;
+      margin: 30px 0 10px;
+  }
+}
+
+@media(max-width: 480px){
+  .signin .contentBx .formBx{
+      padding: 30px 20px;
+      margin: 10px;
+  }
+}
 
   /* can be configured in tailwind.config.js */
   .group:hover .group-hover\:block {
