remove large screen bug 4

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8,7 +8,10 @@ h1,h2,h3,h4,h5,h6{
 
 @media(max-width: 768px){
   .all_book .book{
-    max-width: 16rem;
+    max-width: 13rem;
+  }
+  .book img{
+    height: 60% !important;
   }
   
 }
