remove large screen bug 5

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8,10 +8,13 @@ h1,h2,h3,h4,h5,h6{
 
 @media(max-width: 768px){
   .all_book .book{
-    max-width: 13rem;
+    max-width: 10rem;
   }
-  .book img{
-    height: 60% !important;
+  .book .imgBx{
+    height: 100px !important;
+  }
+  .book .imgBx img{
+    object-fit: fill;
   }
   
 }
