--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -7,19 +7,23 @@ h1,h2,h3,h4,h5,h6{
 } */
 
 @media(max-width: 768px){
-  /* .all_book .book{
-    max-width: 10rem;
-  }
   .all_book .book .imgBx{
-    height: 100px !important;
+    width: 110px;
+    height: 150px !important;
   }
   .all_book .book .imgBx img{
     object-fit: fill;
-  } */
+    height: 100% !important;
+    width: 100%;
+  }
+  .all_book .book p{
+    display: none;
+  }
 }
 .book img{
   max-width: 100%;
-  height: auto !important;
+  height: 100%;
+  object-fit: cover;
 }
 .line-clamp{
   display: -webkit-box;
@@ -78,7 +82,7 @@ h1,h2,h3,h4,h5,h6{
 .chats .user-text{
     color: #fff !important;
 }
-@media(max-width: 900px) {
+@media(max-width: 1024px) {
     .nav {
         display: none;
     }
@@ -221,7 +225,7 @@ h1,h2,h3,h4,h5,h6{
   }
   
   
-  @media(min-width: 900px) {
+  @media(min-width: 1024px) {
     .hamburger-menu {
         display: none;
     }
