--- a/src/Components/Loader.css
+++ b/src/Components/Loader.css
@@ -2,6 +2,21 @@
 	display: flex;
 	flex-direction: row;
 }
+.loader div:nth-child(1){
+	--i: 0
+}
+.loader div:nth-child(2){
+	--i: 1
+}
+.loader div:nth-child(3){
+	--i: 2
+}
+.loader div:nth-child(4){
+	--i: 3
+}
+.loader div:nth-child(5){
+	--i: 4
+}
 
 .loader div {
 	position: relative;
