--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.modal{
+  width: 100%;
+  z-index: 99;
+  min-height: 100vh;
+  position: absolute;
+  background: rgba(0,0,0,0.5);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
